# Synthesizer

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Data flow.md  Fetch and Build Synthesizer.command  README.md  Update_Synth.command  What should it do?.md
.githooks/: commit-msg  pre-commit  pre-push
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Data flow.md  GITHUB.md  GIT_RULES.md  IMPLEMENTATION_PLAN.md  MODULES.md  PROJECT_OVERVIEW.md  Pieces.md  README.md  RELEASING.md  ROADMAP.md  User Manual.md  What should it do?.md
docs/devlog/: README.md
include/synth/app/: ControllerCommands.hpp  Instrument.hpp  InstrumentState.hpp  Pieces.hpp  PiecesSynth.hpp  RealtimeCommands.hpp  Robin.hpp  SourceState.hpp  Synth.hpp  SynthController.hpp  SynthHost.hpp  Test.hpp  TestSynth.hpp
include/synth/audio/: AudioEngine.hpp  PiecesEngine.hpp  PolySynth.hpp  SampleBuffer.hpp  SampleLoader.hpp  SamplePlaybackMode.hpp  SamplePlayerEngine.hpp  Synth.hpp  SynthEngine.hpp  TestEngine.hpp  TestSynth.hpp  Voice.hpp
include/synth/core/: CrashDiagnostics.hpp  Logger.hpp
include/synth/dsp/: Chorus.hpp  DelayLine.hpp  Effects.hpp  Envelope.hpp  IDspModule.hpp  Lfo.hpp  LowPassFilter.hpp  ModuleHost.hpp  Oscillator.hpp  ThreeBandEq.hpp
include/synth/graph/: FxRackNode.hpp  LiveGraph.hpp  OutputMixerNode.hpp  PiecesSourceNode.hpp  RobinSourceNode.hpp  TestSourceNode.hpp
include/synth/interfaces/: IAudioDriver.hpp
include/synth/io/: MidiInput.hpp  OscServer.hpp
include/synth/midi/: MidiInput.hpp
include/synth/osc/: OscServer.hpp
modules/highpass/: CMakeLists.txt  HighPassModule.cpp  HighPassModule.hpp
modules/lowpass/: CMakeLists.txt  LowPassModule.cpp  LowPassModule.hpp
resources/: Info.plist.in
scripts/: build-app.sh  build.sh  check-git-rules.sh  clean.sh  fetch-and-build-app.sh  git-commit.sh  github-create.sh  install-git-hooks.sh  new-devlog-entry.sh  package-app.sh  run-app.sh  run.sh  sign-and-notarize-app.sh  swap-module.sh
src/: main.cpp
src/app/: Pieces.cpp  PiecesSynth.cpp  Robin.cpp  SynthController.cpp  SynthHost.cpp  Test.cpp  TestSynth.cpp
src/audio/: AudioEngine.cpp  PiecesEngine.cpp  PolySynth.cpp  SampleLoader.cpp  SamplePlayerEngine.cpp  Synth.cpp  SynthEngine.cpp  TestEngine.cpp  TestSynth.cpp  Voice.cpp
src/core/: CrashDiagnostics.cpp  Logger.cpp
src/dsp/: Chorus.cpp  DelayLine.cpp  Envelope.cpp  Lfo.cpp  LowPassFilter.cpp  ModuleHost.cpp  Oscillator.cpp  ThreeBandEq.cpp
src/graph/: FxRackNode.cpp  LiveGraph.cpp  OutputMixerNode.cpp  PiecesSourceNode.cpp  RobinSourceNode.cpp  TestSourceNode.cpp
src/interfaces/: AudioDriverCoreAudio.cpp
src/io/: MidiInput.cpp  OscServer.cpp
src/midi/: MidiInput.cpp
src/osc/: OscServer.cpp
src/platform/macos/: AppMain.mm
src/ui_web/: app.js  index.html  styles.css
tests/: SynthRegressionTests.cpp
